fix(backend): use env-driven CORS and correct health check path